package cn.wtk.mp.common.security.service.auth.server;

/**
 * @author wtk
 * @date 2022-10-17
 */
public interface IServerCredentialProvider {
    ServerTokenCredential create();
}
