@startuml
'https://plantuml.com/class-diagram
skinparam shadowing false
skinparam defaultFontName xfonts-wqy
skinparam dpi 300
skinparam activity  {
    DiamondFontSize 14
    ArrowFontSize 14
    FontSize 14
}


class CurServerAuthenticationHolder {
    - ServerTokenCredential serverTokenCredential
    - IServerCredentialProvider serverCredentialProvider
    + ServerTokenCredential get()
}

IServerCredentialProvider <- CurServerAuthenticationHolder : 获取服务凭证

interface IServerCredentialProvider {
    ServerTokenCredential create()
}

class RemoteServerCredentialProvider implements IServerCredentialProvider {
    - ServerCredentialFeign serverCredentialFeign
    - ServerCredentialConfig config
    - RedisTemplate<String, ServerTokenCredential> redisTemplate
    - ServerDigestGenerator serverDigestGenerator
    + ServerTokenCredential create()
}

RemoteServerCredentialProvider .> RedisTemplate: 缓存远程调用的Token
RemoteServerCredentialProvider ..> ServerCredentialConfig: 当前服务配置
RemoteServerCredentialProvider ..> ServerDigestGenerator: 摘要生成

class ServerDigestGenerator {
    - MessageDigest messageDigest
    + byte[] generate(Long serverId,String serverName,String secret)
}

class ServerTokenFeignRequestInterceptor {
    - ServerCredentialConfig config
    - CurServerAuthenticationHolder curServerAuthenticationHolder
    + void apply(RequestTemplate requestTemplate)
}
note left of ServerTokenFeignRequestInterceptor: OpenFeign远程调用拦截器，\n在进行远程调用时自动配置本服务的Token

ServerTokenFeignRequestInterceptor ..> CurServerAuthenticationHolder: 获取token

class ServerCredentialConfig {
    - String headerName
    - Long serverId
    - String serverName
    - String secret
    - String cacheKey
}

@enduml